[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assests/GamePlayTextures/Bosses/mage-2-122x110.png" type="Texture" id=1]
[ext_resource path="res://Script/Boss_2.gd" type="Script" id=2]
[ext_resource path="res://Assests/Fonts/font.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 3 )

[node name="Boss_2" type="Area2D" groups=[
"damageable",
]]
scale = Vector2( 3.2, 3.2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -12.9681, -24.5909, -12.8195, -29.7937, -9.10318, -35.1451, -7.02206, -35.5911, -5.68421, -38.7127, -1.81928, -41.2398, 3.53214, -41.2398, 0.113174, -42.5777, -4.94096, -42.875, -4.94096, -44.3615, 2.04564, -44.3615, 5.76191, -41.8344, 5.01865, -40.0506, -0.0354767, -39.6047, -0.778732, -38.1181, -3.75175, -37.9695, -3.9004, -36.1857, 1.30238, -34.1046, -0.630081, -31.7262, 0.559128, -29.3477, 0.261826, -23.9963, 1.30238, -25.4828, 5.1673, -25.1855, 9.18088, -27.5639, 11.262, -26.9693, 12.1539, -29.3477, 14.0864, -29.3477, 15.2756, -26.5234, 15.1269, -23.1044, 18.2486, -19.5368, 20.9243, -23.9963, 22.7081, -24.5909, 22.7081, -26.2261, 24.4919, -26.3747, 24.3433, -28.7531, 29.2487, -32.4694, 34.4515, -32.0235, 36.6813, -29.4964, 36.2353, -26.2261, 37.4245, -25.9288, 37.4245, -22.5098, 33.2623, -17.9016, 30.438, -17.9016, 29.6947, -16.7124, 28.2082, -16.5638, 28.3568, -13.8881, 29.5461, -12.4015, 29.2487, -8.23932, 28.2082, -6.60416, 24.6406, -9.72583, 21.3702, -9.72583, 18.9918, -8.83392, 21.3702, -8.09067, 22.4108, -6.60416, 22.4108, -3.63114, 23.1541, -2.29328, 25.5325, -0.360825, 28.5055, -0.360825, 28.5055, 2.3149, 30.7353, 2.3149, 31.3299, -2.59058, 34.6002, 0.977036, 35.3434, -4.07709, 36.5326, -1.99598, 38.9111, -4.22574, 40.6949, -4.07709, 46.0463, -9.27987, 46.0463, -11.2123, 47.6815, -10.915, 48.1274, -12.4015, 49.3166, -12.2529, 49.168, -14.4827, 50.0599, -14.1854, 50.0599, -16.4151, 51.695, -16.1178, 51.9923, -17.0097, 52.7356, -17.0097, 53.0329, -21.9152, 61.2087, -22.0638, 61.06, -14.0367, 55.8573, -13.8881, 56.1546, -12.9961, 54.9653, -13.1448, 54.9653, -11.361, 52.8842, -11.361, 52.8842, -10.0231, 51.1004, -10.1718, 51.2491, -8.98257, 50.2085, -9.13122, 50.5058, -6.90146, 48.5734, -7.05011, 43.0733, -1.84733, 43.2219, -0.509476, 41.4381, 1.72029, 42.4787, 3.5041, 38.4651, 3.95005, 41.7354, 7.81498, 36.0867, 8.55823, 36.0867, 10.6393, 38.7624, 10.788, 39.2084, 12.8691, 38.1678, 14.207, 33.2623, 14.207, 32.2218, 15.0989, 32.5191, 16.5854, 31.1812, 17.9232, 29.3974, 17.9232, 29.3974, 18.6665, 24.6406, 19.1124, 23.7487, 20.0043, 22.4108, 20.153, 21.8162, 20.8963, 18.9918, 21.0449, 20.4783, 24.0179, 19.5864, 25.8017, 17.0594, 26.6936, 18.9918, 28.6261, 16.1675, 32.0451, 14.3837, 32.491, 10.9647, 34.7208, 11.5593, 36.5046, 15.4242, 39.4776, 22.4108, 39.6263, 23.6, 38.4371, 27.019, 38.4371, 27.9109, 39.4776, 29.3974, 39.9236, 31.7758, 37.3965, 30.438, 35.91, 29.992, 34.2748, 31.4785, 32.6397, 33.1137, 32.7883, 34.8975, 35.3154, 33.2623, 37.6938, 30.1407, 41.2614, 27.019, 41.4101, 26.1271, 40.0722, 17.3567, 45.7209, 9.32953, 48.9913, 3.9781, 49.1399, -0.0354767, 46.7615, -4.1977, 50.0318, -9.84644, 50.0318, -13.86, 47.2075, -16.3871, 47.2075, -18.4682, 48.9913, -26.0494, 49.1399, -32.2927, 45.5723, -36.009, 41.856, -35.8603, 40.3695, -40.3199, 37.5452, -42.5496, 37.9911, -44.928, 40.5182, -43.7388, 42.0047, -44.4821, 43.7885, -46.2659, 44.3831, -48.0497, 42.5993, -47.4551, 40.6668, -45.5226, 38.5857, -42.6983, 36.6532, -40.4685, 35.91, -38.0901, 36.6532, -35.7117, 38.4371, -33.4819, 39.329, -31.6981, 41.5587, -28.5764, 42.1533, -24.7115, 40.0722, -20.9952, 35.7613, -24.5629, 34.4235, -27.2386, 31.7478, -27.2386, 28.6261, -28.1305, 27.4369, -29.617, 27.2882, -30.9549, 28.3288, -33.036, 27.4369, -33.036, 25.8017, -31.8468, 24.0179, -33.036, 22.0855, -35.7117, 21.9368, -37.0495, 19.4097, -37.6441, 17.6259, -39.5766, 14.9502, -42.401, 17.18, -46.1172, 17.0313, -48.347, 16.1394, -50.7254, 15.5448, -51.0227, 12.1259, -50.1308, 10.1934, -49.9822, 5.58521, -48.9416, 4.24735, -53.1038, -2.44193, -53.1038, -6.15821, -48.9416, -6.00956, -47.3064, -7.34741, -45.8199, -6.00956, -42.1037, -5.5636, -42.2523, -7.49606, -42.8469, -7.94202, -43.2929, -10.7664, -44.0361, -14.0367, -46.2659, -14.78, -50.1308, -18.4962, -49.9822, -20.5773, -51.1714, -21.4692, -50.7254, -23.4017, -48.9416, -25.7801, -54.739, -29.4964, -50.8741, -31.4289, -51.4687, -33.9559, -53.8471, -33.9559, -56.8201, -37.0776, -61.4283, -37.0776, -58.158, -40.6452, -58.4553, -46.1453, -56.8201, -46.7399, -56.6715, -53.2805, -52.5092, -48.2264, -50.2795, -48.3751, -48.0497, -45.9966, -42.9956, -45.9966, -46.1172, -42.1317, -45.9686, -38.4154, -48.1984, -35.5911, -47.0092, -32.3208, -42.5496, -34.4019, -44.928, -28.1585, -43.8875, -27.4153, -42.1037, -26.3747, -41.6577, -23.9963, -41.0631, -22.2125, -38.2387, -23.5504, -35.563, -23.1044, -33.6306, -25.0369, -34.2252, -27.118, -32.4414, -28.7531, -30.063, -27.7126, -29.7656, -25.7801, -28.5764, -25.3342, -25.4548, -28.7531, -23.671, -28.7531, -19.5087, -25.1855, -14.4546, -25.0369 )

[node name="FireGun" type="Node2D" parent="."]
position = Vector2( -64.3014, 4.12945 )

[node name="FireDelayerTimer" type="Timer" parent="."]

[node name="Control" type="Control" parent="."]
margin_left = -46.9944
margin_top = -67.9887
margin_right = 47.0056
margin_bottom = -50.9887
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeProgress" type="ProgressBar" parent="Control"]
margin_left = 7.65541
margin_right = 84.6554
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="FireDelayerTimer" to="." method="_on_FireDelayerTimer_timeout"]
